--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="index.html">Road Trip <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html">Road Trip <span>by Progmaker</span></a></div>
 				<a href="#menu"><span>Menu</span></a>
 			</header>
 
@@ -150,7 +150,7 @@
 					</ul>
 
 					<div class="copyright">
-						&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+						&copy; Untitled. Design: <a href="https://t.me/Progmaker_7007">Progmaker</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
 					</div>
 
 				</div>
