--- a/elements.html
+++ b/elements.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Road Trip by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
 		<title>Elements - Road Trip by Progmaker</title>
@@ -484,7 +479,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 					</ul>
 
 					<div class="copyright">
-						&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+						&copy; Untitled. Design: <a href="https://t.me/Progmaker_7007">Progmaker</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
 					</div>
 
 				</div>
