--- a/generic.html
+++ b/generic.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Road Trip by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
 		<title>Generic - Road Trip by Progmaker</title>
@@ -94,7 +89,7 @@
 					</ul>
 
 					<div class="copyright">
-						&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+						&copy; Untitled. Design: <a href="https://t.me/Progmaker_7007">Progmaker</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
 					</div>
 
 				</div>
