--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<div class="inner">
 					<article class="box">
 						<header>
-							<h2>Nibh non lobortis mus nibh</h2>
+							<h2>Nibh lobortis mus nibh</h2>
 							<p>01.01.2017</p>
 						</header>
 						<div class="content">
